# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  29 Nov 2003; Masatomo Nakano <nakano@gentoo.org> emerge: fixed rsync bug.
  	This closes bug #34660.

  28 Nov 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Migration
	to non-global settings started -- class config has new functionality and
	is locked after portage is finished initializing -- changes cannot be made
	to the global instance of config 'settings' -- reset() is now functional,
	setcpv() loads PKGUSE from /etc/portage/package.use, load_infodir() loads
	all small files (under 4k) from the vardb directory of an installed package
	so that operations have the same post* settings as they had at merge time.
	Begin modifications to spawn() to allow for files/pipes to be used for
	IO instead of using getstatusoutput which does not take an environment
	parameter like execve(). check_config_instance() ensures that the provided
	parameter is a 'class config' instance -- for ensuring that everything is
	being passed properly with the changes. Fix for the local FS mirror issue
	where it removed the first '/' instead of the last one. doebuild() cleanups
	for readability and pkguse enhancements -- also remove getstatusoutput()
	usage for depend so that we don't have to modify the active environment.
	Fix for symlink mtime values returned from movefile. (Nakano) SLOTMOVE
	added to global update functionality to fix some issues where a package
	suddenly must become slotted. portdbapi takes a root parameter instead
	of using settings. Slightly more useful output from depend. binarytree()
	now takes a pkgdir instead of using settings. Portage will now die if
	ebuild.sh exits on a signal.
	
	Moved some functions around and renamed them for general use -- derived
	from match2 in class portagetree:
	match_to_list() find all atoms in a list that match a given package.